--- a/NoSQL_setup_starter.ipynb
+++ b/NoSQL_setup_starter.ipynb
@@ -30,8 +30,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "3ecdd008",
+   "execution_count": 3,
+   "id": "bd11afc2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "59390c4a",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "7f9ececa",
    "metadata": {},
    "outputs": [
@@ -61,7 +61,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['admin', 'autosaurus', 'classDB', 'config', 'epa', 'local', 'uk_food']\n"
+      "['admin', 'autosaurus', 'classDB', 'config', 'epa', 'local', 'met', 'uk_food']\n"
      ]
     }
    ],
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "71e373c1",
    "metadata": {},
    "outputs": [],
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "ef1b89ed",
    "metadata": {},
    "outputs": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 9,
    "id": "6a0d92df",
    "metadata": {},
    "outputs": [
@@ -110,32 +110,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'AddressLine1': 'The Pines Garden',\n",
-      " 'AddressLine2': 'Beach Road',\n",
-      " 'AddressLine3': 'St Margarets Bay',\n",
-      " 'AddressLine4': 'Kent',\n",
-      " 'BusinessName': 'The Pines Calyx',\n",
-      " 'BusinessType': 'Other catering premises',\n",
-      " 'BusinessTypeID': 7841,\n",
+      "{'AddressLine1': 'Wear Bay Road',\n",
+      " 'AddressLine2': 'Folkestone',\n",
+      " 'AddressLine3': 'Kent',\n",
+      " 'AddressLine4': '',\n",
+      " 'BusinessName': 'Wear Bay Bowls Club',\n",
+      " 'BusinessType': 'Pub/bar/nightclub',\n",
+      " 'BusinessTypeID': 7843,\n",
       " 'ChangesByServerID': 0,\n",
-      " 'Distance': 4587.362402580997,\n",
-      " 'FHRSID': 254250,\n",
-      " 'LocalAuthorityBusinessID': 'PI/000066174',\n",
-      " 'LocalAuthorityCode': '182',\n",
-      " 'LocalAuthorityEmailAddress': 'publicprotection@dover.gov.uk',\n",
-      " 'LocalAuthorityName': 'Dover',\n",
-      " 'LocalAuthorityWebSite': 'http://www.dover.gov.uk/',\n",
+      " 'Distance': 4591.821311183521,\n",
+      " 'FHRSID': 647177,\n",
+      " 'LocalAuthorityBusinessID': 'PI/000041489',\n",
+      " 'LocalAuthorityCode': '188',\n",
+      " 'LocalAuthorityEmailAddress': 'foodteam@folkestone-hythe.gov.uk',\n",
+      " 'LocalAuthorityName': 'Folkestone and Hythe',\n",
+      " 'LocalAuthorityWebSite': 'http://www.folkestone-hythe.gov.uk',\n",
       " 'NewRatingPending': False,\n",
       " 'Phone': '',\n",
-      " 'PostCode': 'CT15 6DZ',\n",
-      " 'RatingDate': '2021-08-17T00:00:00',\n",
-      " 'RatingKey': 'fhrs_5_en-gb',\n",
-      " 'RatingValue': '5',\n",
+      " 'PostCode': 'CT19 6PY',\n",
+      " 'RatingDate': '2014-03-31T00:00:00',\n",
+      " 'RatingKey': 'fhrs_4_en-gb',\n",
+      " 'RatingValue': 4,\n",
       " 'RightToReply': '',\n",
       " 'SchemeType': 'FHRS',\n",
-      " '_id': ObjectId('64b4c08aecd9202a34e3c1d1'),\n",
-      " 'geocode': {'latitude': '51.148133', 'longitude': '1.383298'},\n",
-      " 'links': [{'href': 'https://api.ratings.food.gov.uk/establishments/254250',\n",
+      " '_id': ObjectId('64b4c08aecd9202a34e3c4b1'),\n",
+      " 'geocode': {'latitude': 51.086058, 'longitude': 1.196408},\n",
+      " 'links': [{'href': 'https://api.ratings.food.gov.uk/establishments/647177',\n",
       "            'rel': 'self'}],\n",
       " 'meta': {'dataSource': None,\n",
       "          'extractDate': '0001-01-01T00:00:00',\n",
@@ -145,7 +145,7 @@
       "          'returncode': None,\n",
       "          'totalCount': 0,\n",
       "          'totalPages': 0},\n",
-      " 'scores': {'ConfidenceInManagement': 0, 'Hygiene': 0, 'Structural': 0}}\n"
+      " 'scores': {'ConfidenceInManagement': 10, 'Hygiene': 5, 'Structural': 5}}\n"
      ]
     }
    ],
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 10,
    "id": "11c9f11b",
    "metadata": {},
    "outputs": [],
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 11,
    "id": "c2da7648",
    "metadata": {},
    "outputs": [],
@@ -221,17 +221,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "id": "a6e5cece",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.InsertOneResult at 0x1c8f8bff7c0>"
+       "<pymongo.results.InsertOneResult at 0x1c6e78213c0>"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "id": "63bb10f9",
    "metadata": {},
    "outputs": [
@@ -257,7 +257,7 @@
       " 'AddressLine4': '',\n",
       " 'BusinessName': 'Penang Flavours',\n",
       " 'BusinessType': 'Restaurant/Cafe/Canteen',\n",
-      " 'BusinessTypeID': '',\n",
+      " 'BusinessTypeID': 1,\n",
       " 'Distance': 4623.972328074718,\n",
       " 'LocalAuthorityCode': '511',\n",
       " 'LocalAuthorityEmailAddress': 'health@royalgreenwich.gov.uk',\n",
@@ -266,10 +266,11 @@
       " 'NewRatingPending': True,\n",
       " 'Phone': '',\n",
       " 'PostCode': 'SE18 7DY',\n",
+      " 'RatingValue': None,\n",
       " 'RightToReply': '',\n",
       " 'SchemeType': 'FHRS',\n",
       " '_id': ObjectId('64b4c2f805072d9869b8759e'),\n",
-      " 'geocode': {'latitude': '51.49014200', 'longitude': '0.08384000'},\n",
+      " 'geocode': {'latitude': 51.490142, 'longitude': 0.08384},\n",
       " 'scores': {'ConfidenceInManagement': '', 'Hygiene': '', 'Structural': ''}}\n"
      ]
     }
@@ -290,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 14,
    "id": "93c63829",
    "metadata": {},
    "outputs": [
@@ -300,7 +301,7 @@
      "text": [
       "{'BusinessType': 'Restaurant/Cafe/Canteen',\n",
       " 'BusinessTypeID': 1,\n",
-      " '_id': ObjectId('64b4c08aecd9202a34e3c1d3')}\n"
+      " '_id': ObjectId('64b4c08aecd9202a34e3c4b3')}\n"
      ]
     }
    ],
@@ -324,17 +325,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 15,
    "id": "7f599f3d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.UpdateResult at 0x1c881b8ca40>"
+       "<pymongo.results.UpdateResult at 0x1c6e783afc0>"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -351,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 16,
    "id": "a6ad16f7",
    "metadata": {},
    "outputs": [
@@ -374,10 +375,11 @@
       " 'NewRatingPending': True,\n",
       " 'Phone': '',\n",
       " 'PostCode': 'SE18 7DY',\n",
+      " 'RatingValue': None,\n",
       " 'RightToReply': '',\n",
       " 'SchemeType': 'FHRS',\n",
       " '_id': ObjectId('64b4c2f805072d9869b8759e'),\n",
-      " 'geocode': {'latitude': '51.49014200', 'longitude': '0.08384000'},\n",
+      " 'geocode': {'latitude': 51.490142, 'longitude': 0.08384},\n",
       " 'scores': {'ConfidenceInManagement': '', 'Hygiene': '', 'Structural': ''}}\n"
      ]
     }
@@ -398,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 17,
    "id": "768474a6",
    "metadata": {},
    "outputs": [
@@ -406,7 +408,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of documents in result: 994\n"
+      "Number of documents in result: 0\n"
      ]
     }
    ],
@@ -418,17 +420,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 18,
    "id": "a11d5f1b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.DeleteResult at 0x1c8811d8e40>"
+       "<pymongo.results.DeleteResult at 0x1c6e7e004c0>"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -440,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 19,
    "id": "2a51aba0",
    "metadata": {},
    "outputs": [
@@ -459,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 20,
    "id": "8c356f7b",
    "metadata": {},
    "outputs": [
@@ -531,17 +533,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "id": "fd4112ce",
+   "execution_count": 24,
+   "id": "60b87580",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.UpdateResult at 0x1c881322400>"
+       "<pymongo.results.UpdateResult at 0x1c6e77d25c0>"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -563,17 +565,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 25,
    "id": "04430a5b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.UpdateResult at 0x1c8f662f040>"
+       "<pymongo.results.UpdateResult at 0x1c6e7df6280>"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -586,17 +588,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 26,
    "id": "92524ccc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.UpdateResult at 0x1c8ff5bf500>"
+       "<pymongo.results.UpdateResult at 0x1c6e7e022c0>"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -608,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 27,
    "id": "0deacaf9",
    "metadata": {},
    "outputs": [
